WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255867
[JSC] fix include error by
263041@main
https://bugs.webkit.org/show_bug.cgi?id=255867
Summary
[JSC] fix include error by 263041@main
Thomas Devoogdt
Reported
2023-04-24 06:21:07 PDT
``` /home/thomas/Documents/buildroot/output/build/webkitgtk-2.38.6/Source/JavaScriptCore/runtime/ArgList.h: In member function ‘decltype(auto) JSC::MarkedVector<T, passedInlineCapacity, OverflowHandler>::at(int) const’: /home/thomas/Documents/buildroot/output/build/webkitgtk-2.38.6/Source/JavaScriptCore/runtime/ArgList.h:144:20: error: ‘jsCast’ was not declared in this scope return jsCast<T>(JSValue::decode(slotFor(i)).asCell()); ```
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2023-04-24 11:41:03 PDT
Committed
263324@main
(d7a67e49ad54): <
https://commits.webkit.org/263324@main
> Reviewed commits have been landed. Closing PR #13101 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2023-04-24 11:42:20 PDT
<
rdar://problem/108463858
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug