[JSC] fix include error by 263041@main

https://bugs.webkit.org/show_bug.cgi?id=255867

Reviewed by Yusuke Suzuki.

Seen on webkitgtk-2.38.6 but also applicable on main.

/home/thomas/Documents/buildroot/output/build/webkitgtk-2.38.6/Source/JavaScriptCore/runtime/ArgList.h: In member function ‘decltype(auto) JSC::MarkedVector<T, passedInlineCapacity, OverflowHandler>::at(int) const’:
/home/thomas/Documents/buildroot/output/build/webkitgtk-2.38.6/Source/JavaScriptCore/runtime/ArgList.h:144:20: error: ‘jsCast’ was not declared in this scope
             return jsCast<T>(JSValue::decode(slotFor(i)).asCell());

Signed-off-by: Thomas Devoogdt <thomas.devoogdt@barco.com>
Canonical link: https://commits.webkit.org/263324@main